# simple-text-game

./: CMakeLists.txt  README.md
include/Entities/: Ability.h  AbilityFactory.h  AbilityInventory.h  AbilityRegistration.h  HealthBoostAbility.h  Player.h
include/Events/: Choice.h  Event.h
include/GameManager/: CombatManager.h  EventManager.h  GameManager.h  InputDecorator.h  InputManager.h
include/Interactables/Monsters/: BaseMonster.h  Dragon.h  Goblin.h  MonsterFactory.h  MonsterRegistration.h
include/Interactables/NPCs/: BaseNPC.h  DialogNPC.h  NPCFactory.h  NPCTrapRegistration.h
include/Interactables/Traps/: BaseTrap.h  PitfallTrap.h  PoisonGasTrap.h  TrapFactory.h
include/Utilities/: ClimbWallAction.h  ContinueAction.h  FightAction.h  GetPotionAction.h  RunAwayAction.h  baseAction.h
include/World/: Room.h  WorldMap.h
resources/: PlayerStatus.xml  events.xml  worldmap.xml
src/: main.cpp
src/Entities/: Ability.cpp  AbilityFactory.cpp  AbilityInventory.cpp  HealthBoostAbility.cpp  Player.cpp
src/Events/: Choice.cpp  Event.cpp
src/GameManager/: CombatManager.cpp  EventManager.cpp  GameManager.cpp  InputDecorator.cpp  InputManager.cpp
src/Interactables/Monsters/: BaseMonster.cpp  Dragon.cpp  Goblin.cpp  MonsterFactory.cpp
src/Interactables/NPCs/: BaseNPC.cpp  DialogNPC.cpp  NPCFactory.cpp
src/Interactables/Traps/: BaseTrap.cpp  PitfallTrap.cpp  PoisonGasTrap.cpp  TrapFactory.cpp
src/Utilities/: FightAction.cpp
src/World/: Room.cpp  WorldMap.cpp
